# jenkins-rest-manage

./: .pre-commit-config.yaml  README.md  jenkins-rest-manage.py  pyproject.toml
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
jenkins_rest_manage/: __init__.py  __main__.py  conftest.py  settings.py
jenkins_rest_manage/services/: __init__.py  jenkins_controller.py  jenkins_service.py
jenkins_rest_manage/tests/: __init__.py
jenkins_rest_manage/web/: __init__.py  application.py
jenkins_rest_manage/web/api/: __init__.py  router.py
jenkins_rest_manage/web/api/monitoring/: __init__.py
